--- a/portfolio/assets/style.css
+++ b/portfolio/assets/style.css
@@ -3,6 +3,8 @@
     --dividerBoxShadowColor: #e5e5e5;
     --headerTextOffsetX: 4px;
     --headerTextOffsetY: 4px;
+    --boxShadowOffset: 1px;
+    --boxShadowBlur: 5px;
 }
 
 html {
@@ -66,7 +68,7 @@ nav.navbar {
     top: 0;
     z-index: 100;
     width: calc(100% - 25px);
-    box-shadow: 0 5px 8px -2px var(--dividerBoxShadowColor);
+    box-shadow: 0 var(--boxShadowOffset) var(--boxShadowBlur) -2px #00000070;
     height: 65px;
     background-color: white;
     display: flex;
@@ -386,7 +388,7 @@ p.small {
 
 section#portfolio {
     position: relative;
-    box-shadow: 0 0 20px var(--dividerBoxShadowColor);
+    box-shadow: 0 0 var(--boxShadowBlur) var(--dividerBoxShadowColor);
 }
 
 section#portfolio .buttons:first-of-type {
@@ -531,7 +533,7 @@ ul li:not(.active) {
 
 .page#about {
     position: relative;
-    box-shadow: 0 0 20px var(--dividerBoxShadowColor);
+    box-shadow: 0 0 var(--boxShadowOffset) var(--dividerBoxShadowColor);
     z-index: 10;
 }
 
@@ -552,6 +554,64 @@ ul li:not(.active) {
     flex-shrink: 0;
     flex-grow: 0;
     max-width: 300px;
+    left: 0;
+    top: 0;
+}
+
+@keyframes moveHeadshotBefore {
+    from {
+        transform: scale(1) translate(-5px, 5px) rotate(0deg);
+    }
+    to {
+        transform: scale(.9)  translate(-10px, 10px) rotate(180deg);
+    }
+}
+
+@keyframes moveHeadshotAfter {
+    from {
+        transform: scale(.9) translate(5px, -5px) rotate(0deg);
+    }
+    to {
+        transform: scale(1) translate(10px, -10px) rotate(-180deg);
+    }
+}
+
+.page#about figure {
+    position: relative;
+}
+
+.page#about figure::after {
+    content: "";
+    position: absolute;
+    background-color: #c4b4ff;
+    width: 100%;
+    height: 100%;
+    right: 0px;
+    top: 0px;
+    border-radius: 100%;
+    z-index: -1;
+    
+    animation-name: moveHeadshotAfter;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+
+.page#about figure::before {
+    content: "";
+    position: absolute;
+    background-color: #b4c6ff;
+    width: 100%;
+    height: 100%;
+    left: 0px;
+    bottom: 0px;
+    border-radius: 100%;
+    z-index: -1;
+    
+    animation-name: moveHeadshotBefore;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
 }
 
 @media (min-width: 915px) {
@@ -641,8 +701,13 @@ ul li:not(.active) {
     }
 
     section#work {
-        grid-template-columns: 25% 75%;
+        display: inherit;
+        /* grid-template-columns: 25% 75%; */
+    }
 
+    section#work .largeShrink {
+        display: grid;
+        grid-template-columns: 25% 75%;
     }
 
     section#work #aboutCo {
@@ -728,7 +793,21 @@ ul li:not(.active) {
     }
 } 
 
+#work .largeShrink {
+    display: inherit;
+}
+
 @media screen and (min-width: 2048px) {
+    #work {
+        display: flex;
+        justify-content: center;
+    }
+    #work .largeShrink {
+        display: grid;
+        grid-template-columns: 15% 85%;
+        width: 65%;
+    }
+
     #page {
         display: flex;
         flex-direction: column;
@@ -742,5 +821,11 @@ ul li:not(.active) {
 
     #quote blockquote p {
         font-size: 2em;
+    }
+
+    #companies {
+        display: flex;
+        align-self: center;
+        width: 50%;
     }
 }
