--- a/portfolio/assets/style.css
+++ b/portfolio/assets/style.css
@@ -31,7 +31,7 @@ h2 {
     margin-bottom: 15px;
 }
 
-section.page#rvatechsection {
+section.page {
     position: relative;
 }
 
@@ -39,6 +39,10 @@ section.page#rvatechsection .container {
     display: flex;
     justify-content: center;
     width: calc(100% - (var(--content-padding)));
+}
+
+.anchor {
+    position: absolute;top: -100px;border: 0; width: 0; height: 0;
 }
 
 section#reel {
