--- a/portfolio/assets/style.css
+++ b/portfolio/assets/style.css
@@ -521,7 +521,7 @@ section#work #aboutCo {
     font-size: 2em;
     font-weight: bold;
     text-align: center;
-    color: #BEBEBE;
+    color: #71767d;
     margin-top: 15px;
 }
 
