--- a/portfolio/assets/darkmode.css
+++ b/portfolio/assets/darkmode.css
@@ -63,3 +63,7 @@ html[data-theme="dark"] #hero section article p {
 html[data-theme="dark"] section#reel > * {
     background-color: rgb(238, 238, 238);
 }
+
+html[data-theme="dark"] .whatIDid .tlItem p.date {
+    color: rgb(43, 43, 43);
+}
