--- a/portfolio/assets/style.css
+++ b/portfolio/assets/style.css
@@ -53,7 +53,24 @@ section#reel {
     width: 75%;
     align-self: center;
     z-index: 10;
+    transform: translate3d(-100vw, 0, 0);
 }
+
+section#reel.animate {
+    animation-name: reelDefaultState;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes reelDefaultState {
+    from {
+        transform: translate(-100vw, 0);
+    }
+    to {
+        transform: translate(0, 0)
+    }
+}
+
 section#reel img {
     max-width: 85%;
 }
@@ -765,6 +782,9 @@ ul li:not(.active) {
 }
 
 @media (min-width: 755px) {
+    section#reel.animate {
+        animation-duration: 2s;
+    }
     #work .largeShrink .timeline {
         width: unset;
     }
