--- a/portfolio/assets/style.css
+++ b/portfolio/assets/style.css
@@ -43,6 +43,7 @@ section.page#rvatechsection .container {
 
 .anchor {
     position: absolute;top: -100px;border: 0; width: 0; height: 0;
+    opacity: 0;
 }
 
 section#reel {
