--- a/GhostTheme/default.hbs
+++ b/GhostTheme/default.hbs
@@ -10,29 +10,6 @@
     <script src="https://kit.fontawesome.com/f40d5f26b8.js" crossorigin="anonymous"></script>
     <script src="{{assets}}/assets/js/nav.js"></script>
     <script>
-        function setCookie(cname, cvalue, exdays) {
-            var d = new Date();
-            d.setTime(d.getTime() + (exdays*24*60*60*1000));
-            var expires = "expires="+ d.toUTCString();
-            document.cookie = cname + "=" + cvalue + ";" + expires + ";path=/;domain=.kentonvizdos.com";
-        }
-
-        function getCookie(cname) {
-            var name = cname + "=";
-            var decodedCookie = decodeURIComponent(document.cookie);
-            var ca = decodedCookie.split(';');
-            for(var i = 0; i <ca.length; i++) {
-                var c = ca[i];
-                while (c.charAt(0) == ' ') {
-                c = c.substring(1);
-                }
-                if (c.indexOf(name) == 0) {
-                return c.substring(name.length, c.length);
-                }
-            }
-            return "";
-        }
-
         function toggleDarkmode(forceDark = false, forceLight = false) {
             const html = document.querySelector('html');
             const togBtn = document.querySelectorAll('#nightmodeToggle i')
@@ -46,7 +23,7 @@
 
             html.dataset.theme = (enableDarkmode || forceDark) && !forceLight ? "dark" : "light";
 
-            setCookie("darkmode", (enableDarkmode || forceDark) && !forceLight);
+            localStorage.setItem("darkmode", (enableDarkmode || forceDark) && !forceLight);
         }
     </script>
     <link rel="stylesheet" href="{{assets}}/assets/css/global.css">
@@ -55,7 +32,7 @@
     <link rel="stylesheet" href="{{assets}}/assets/css/navbar.css">
     <link rel="stylesheet" href="{{assets}}/assets/css/post.css">
     <link rel="stylesheet" href="{{assets}}/assets/css/tag.css">
-    <link rel="stylesheet" href="{{assets}}/assets/cssn/footer.css">
+    <link rel="stylesheet" href="{{assets}}/assets/css/footer.css">
 
     {{ghost_head}}
     
@@ -72,20 +49,34 @@
     {{{body}}}
    
     <footer>
+        {{#is "post"}}
+        <h2>Check out these posts, as well:</h2>
+            <section id="recommendedArticles">
+                {{#get "posts" limit="5" filter="tags:[{{post.tags}}]+id:-{{post.id}}" include="tags" as |related|}}
+                    {{#foreach related}}
+                        <section class="recommendedArticle">
+                            <img src={{img_url feature_image size="s"}}>
+                            <article class="content">
+                                <h3>{{title}}</h3>
+                                <p>{{excerpt}}</p>
+                            </article>
+                        </section>
+                    {{/foreach}}
+                {{/get}}
+            </section>
+        {{/is}}
         &copy; {{date format="YYYY"}} {{@site.title}}
     </footer>
     {{ghost_foot}}
 
     <script>
         document.querySelectorAll(".css-transitions-only-after-page-load").forEach(el => el.classList.remove("css-transitions-only-after-page-load"));
-        const enableDarkmode = (window.matchMedia('(prefers-color-scheme: dark)').matches || getCookie("darkmode") == "true") && (getCookie("darkmode") != "false");
+        const enableDarkmode = (window.matchMedia('(prefers-color-scheme: dark)').matches || localStorage.getItem("darkmode") == "true") && (localStorage.getItem("darkmode") != "false");
 
         toggleDarkmode(enableDarkmode, !enableDarkmode)
 
         window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', event => {
             const enableDarkmode2 = event.matches;
-
-            console.log(enableDarkmode2)
 
             toggleDarkmode(enableDarkmode2, !enableDarkmode2)
         })
