--- a/GhostTheme/assets/css/post.css
+++ b/GhostTheme/assets/css/post.css
@@ -1,9 +1,118 @@
 header#post {
     display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding: 25px;
+}
+
+header#post h1 {
+    font-size: 3em;
+    text-align: left;
+}
+
+header#post a {
+    width: fit-content;
+}
+
+.make3d {
+    position: relative;
+    z-index: 2;
+    border-radius: 80px;
+    transform: skewY(5deg);
+    display: none;
+}
+
+.make3d.animate::before {
+    animation-name: animate3d;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    transform: skewY(5deg);
+}
+
+@keyframes animate3d {
+    from {
+        transform: translate3d(-25px, 25px, 0);
+    }
+    to {
+        transform: translate3d(-15px, 15px, 0);
+    }
+}
+
+.make3d img {
+    border-radius: 80px;
+}
+
+.make3d::before {
+    position: absolute;
+    display: block;
+    content: "";
+    width: 100%;
+    height: 100%;
+    background-color: red;
+    z-index: -1;
+    border-radius: inherit;
+    background: var(--make3dbg);
+    box-shadow: 0px 10px 8px rgba(183, 91, 255, 0.25);
+    backdrop-filter: blur(17px);
+}
+
+#aboutMe {
+    background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 5%, rgba(255,255,255,0) 5.1%, rgba(255,255,255,0) 95%, rgba(255,255,255,1) 95.1%, rgba(255,255,255,1) 100%), url('../images/sep-bottom.svg') bottom repeat-x, 
+                url('../images/sep-top.svg') top repeat-x, 
+                url('../images/map.png') no-repeat, 
+                linear-gradient(45deg, rgba(0,228,255,1) 0%, rgba(0,108,255,1) 100%);
+    width: 100%; 
+    display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: center;
+}
+
+#aboutMe article#widthContainer {
+    width: 90%;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding-top: 25px;
+}
+
+#aboutMe article#widthContainer .make3d {
     width: 100%;
+    max-width: 300px;
+}
+
+#aboutMe article#widthContainer .card {
+    background-color: rgba(255,255,255,.9);
+    padding: 50px;
+    border-radius: 50px;
+    box-shadow: 0px 5px 23px 4px rgba(0, 0, 0, 0.25);
+    max-width: 1200px;
+    border-radius: 50px;
+}
+
+#aboutMe article#widthContainer .card h3 {
+    font-size: 2em;
+    padding: 0;
+    margin: 0;
+    padding-bottom: 10px;
+    color: #2E2E2E;
+}
+
+#aboutMe article#widthContainer .card p {
+    font-size: 1.5em;
+    color: #242424;
+    max-height: 300px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+}
+
+#aboutMe article#widthContainer .card a {
+    color: #1371C8;
+    font-size: 1.5em;
 }
 
 .post-outter {
@@ -138,11 +247,6 @@ header#post {
 .post-content .kg-image-card {
     display: flex;
     justify-content: center;
-    align-items: flex-start;
-}
-
-.post-content .kg-image-card img {
-    align-items: flex-start;
 }
 
 .kg-gallery-container {
@@ -334,6 +438,26 @@ pre::-webkit-scrollbar-thumb:hover {
 }
 
 @media (min-width: 915px) {
+    header#post {
+        padding: 50px;
+        padding-left: 100px;
+    }
+    
+    header#post h1 {
+        font-size: 7.5em;
+        width: 75%;
+    }
+    
+    #aboutMe article#widthContainer {
+        width: 60%;
+    }
+    #aboutMe article#widthContainer .make3d {
+        display: initial;
+    }
+    #aboutMe article#widthContainer .card {
+        margin-left: 50px;
+    }
+    
     #clapper {
         flex-direction: row;
         text-align: left;
@@ -397,5 +521,38 @@ pre::-webkit-scrollbar-thumb:hover {
         display: flex !important;
         align-self: center;
         height: 100px;
+    }
+
+    #aboutMe {
+        min-height: 550px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    #aboutMe {
+        min-height: 550px;
+    }
+    .post-content p, .post-content li {
+        font-size: 1.5em !important;
+    }
+}
+
+@media screen and (max-width: 1600px) {
+
+    #aboutMe article#widthContainer .make3d {
+        min-width: 300px;
+    }
+
+}
+
+@media screen and (min-width: 2500px) {
+    #aboutMe {
+        min-height: 550px;
+    }
+}
+
+@media screen and (min-width: 3000px) {
+    #aboutMe {
+        min-height: 750px;
     }
 }
