--- a/GhostTheme/assets/css/footer.css
+++ b/GhostTheme/assets/css/footer.css
@@ -20,6 +20,7 @@ footer #recommendedArticles .recommendedArticle {
     color: black;
     cursor: pointer;
     transition-duration: 200ms;
+    height: 100%;
     border-radius: 20px;
 }
 
