--- a/portfolio/assets/darkmode.css
+++ b/portfolio/assets/darkmode.css
@@ -12,7 +12,7 @@ html[data-theme="dark"] h1,
 html[data-theme="dark"] h2,
 html[data-theme="dark"] h3,
 html[data-theme="dark"] li,
-html[data-theme="dark"] i {
+html[data-theme="dark"] i:not(.fab) {
     color: var(--textColor);
 }
 
