--- a/GhostTheme/assets/css/navbar.css
+++ b/GhostTheme/assets/css/navbar.css
@@ -17,7 +17,10 @@ nav.main {
     align-items: center;
 }
 
-
+html[data-theme='dark'] nav.main {
+    background-color: rgb(17, 17, 24);
+    color: var(--textColor);
+}
 
 nav.main ul {
     list-style: none;
@@ -51,6 +54,10 @@ nav #mobile .navigator {
     z-index: 500;
     transform: translateX(calc(-100vw - 50px));
     transition: .2s;
+}
+
+html[data-theme='dark'] nav #mobile .navigator {
+    background-color: var(--darkAccent);
 }
 
 nav #mobile .navigator i.close {
@@ -102,6 +109,10 @@ nav #desktop {
     nav.main li.dropdown:hover {
         background-color: rgb(235, 235, 235);
     }
+
+    html[data-theme='dark'] nav.main li.dropdown:hover {
+        background-color: var(--darkAccent);
+    }
     
     nav.main li.dropdown ul {
         position: absolute;
@@ -116,7 +127,10 @@ nav #desktop {
         display: none;
         z-index: -11;
         box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    
+    }
+
+    html[data-theme='dark'] nav.main li.dropdown ul {
+        background-color: var(--darkAccent);
     }
     
     nav.main li.dropdown:hover ul {
@@ -139,6 +153,8 @@ nav #desktop {
     nav.main li.dropdown ul li:hover {
         background-color: rgb(230, 230, 230);
     }
-    
 
+    html[data-theme='dark'] nav.main li.dropdown ul li:hover {
+        background-color: var(--darkHoverAccent);
+    }
 }
