--- a/GhostTheme/assets/css/post.css
+++ b/GhostTheme/assets/css/post.css
@@ -5,6 +5,12 @@ header#post {
     padding: 25px;
 }
 
+html[data-theme='dark'] header#post h1,
+html[data-theme='dark'] header#post a,
+html[data-theme='dark'] header#post time {
+    color: var(--textColor);
+}
+
 header#post h1 {
     font-size: 3em;
     text-align: left;
@@ -69,6 +75,13 @@ header#post a {
     justify-content: center;
 }
 
+html[data-theme='dark'] #aboutMe {
+    background: linear-gradient(0deg, var(--darkBg) 0%, var(--darkBg) 5%, rgba(255,255,255,0) 5.1%, rgba(255,255,255,0) 95%, var(--darkBg) 95.1%, var(--darkBg) 100%), url('../images/sep-bottom-dark.svg') bottom repeat-x, 
+                url('../images/sep-top-dark.svg') top repeat-x, 
+                url('../images/map.png') no-repeat, 
+                linear-gradient(45deg, rgba(0,228,255,1) 0%, rgba(0,108,255,1) 100%);
+}
+
 #aboutMe article#widthContainer {
     width: 90%;
 
@@ -93,12 +106,20 @@ header#post a {
     border-radius: 50px;
 }
 
+html[data-theme='dark'] #aboutMe article#widthContainer .card {
+    background-color: rgba(39, 43, 49, .9);
+}
+
 #aboutMe article#widthContainer .card h3 {
     font-size: 2em;
     padding: 0;
     margin: 0;
     padding-bottom: 10px;
     color: #2E2E2E;
+}
+
+html[data-theme='dark'] #aboutMe article#widthContainer .card h3 {
+    color: rgb(207, 207, 207);
 }
 
 #aboutMe article#widthContainer .card p {
@@ -108,6 +129,10 @@ header#post a {
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
+}
+
+html[data-theme='dark'] #aboutMe article#widthContainer .card p {
+    color: var(--textColor);
 }
 
 #aboutMe article#widthContainer .card a {
@@ -130,6 +155,14 @@ header#post a {
 
 .post-full .post-full-image img {
     width: 100vw;
+}
+
+html[data-theme='dark'] .post-full {
+    color: var(--textColor)
+}
+
+html[data-theme='dark'] .post-full figure img {
+    opacity: .75;
 }
 
 .postauthor {
@@ -393,10 +426,6 @@ pre {
     box-shadow: inset 0 0 4px black;
     overflow-x: scroll;
     margin: 20px;
-}
-
-html[data-theme="dark"] pre {
-    filter: invert(1) hue-rotate(180deg);
 }
 
 /* width */
