--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -392,7 +392,7 @@ html[data-theme='dark'] .kg-card.kg-bookmark-card .kg-bookmark-icon {
 }
 
 .kg-card img {
-    height: -webkit-fill-available;
+    height: auto;
 }
 
 .kg-card-hascaption {
