--- a/index.hbs
+++ b/index.hbs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="I'm a high school student in Richmond, VA studying full stack web development." />
+    <meta name="description" content="I'm a developer in Richmond, VA studying full stack web development." />
     <meta name="keywords" content="HTML, CSS, XML, XHTML, JavaScript, NodeJS, web development, web, developer, front end, full stack, code, programming. for hire">
 
     <meta name="twitter:card" content="summary_large_image" />
@@ -15,7 +15,7 @@
     <meta property="og:title" content="My web development portfolio." />
     <meta property="og:image" content="https://kentonvizdos.com/assets/portfolio/images/ogcard.png" />
 
-    <meta property="og:description" content="I'm a high school student in Richmond, VA studying full stack web development." />
+    <meta property="og:description" content="I'm a developer in Richmond, VA studying full stack web development." />
 
 
     <title>Kenton Vizdos - full stack web developer</title>
@@ -87,7 +87,7 @@
                 <img class="headshot" src="./assets/portfolio/images/headshot.jpg" alt="My headshot" />
                     <section>
                     <h1>Kenton Vizdos</h1>
-                    <p>I'm a high school student in Richmond, VA studying full stack web development</p>
+                    <p>I'm a developer in Richmond, VA studying full stack web development</p>
                     <article class="socialBtns">
                         <a aria-label="LinkedIn" rel="noopener" href="https://www.linkedin.com/in/kentonvizdos/" target="_blank"><i class="fab fa-linkedin"></i></a>
                         <a aria-label="Twitter" rel="noopener" href="http://twitter.com/kvizdos" target="_blank"><i class="fab fa-twitter"></i></a>
