--- a/post.hbs
+++ b/post.hbs
@@ -25,8 +25,8 @@
                         <img src="{{primary_author.profile_image}}" />
                     </article>
                     <article class="card">
-                        <h3>Kenton Vizdos</h3>
-                        <p>My name is Kenton Vizdos and I am a senior at Deep Run High School's Center for Information Technology (CIT). Over the last few years, you may have seen me around town at ScrumRVA, Agile Richmond, Innovate Virginia, or one of the many other amazing Richmond events.</p>
+                        <h3>{{primary_author.name}}</h3>
+                        <p>{{primary_author.bio}}</p>
                         
                         <a href="https://twitter.com/{{primary_author.twitter}}" target="_blank" class="twitter"><i class="fab fa-twitter"></i> {{primary_author.twitter}}</a>
                     </article>
